nixidy/generated/prod/firefly/Deployment-firefly-importer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: firefly-importer
    app.kubernetes.io/instance: firefly-importer
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: firefly-importer
  name: firefly-importer
  namespace: finance
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: firefly-importer
      app.kubernetes.io/instance: firefly-importer
      app.kubernetes.io/name: firefly-importer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: 58ca5196a1df117aaeb540ebf4d69cfbbfef8d965f9e3d33bfcf5ad96ea37e3e
      labels:
        app.kubernetes.io/controller: firefly-importer
        app.kubernetes.io/instance: firefly-importer
        app.kubernetes.io/name: firefly-importer
    spec:
      automountServiceAccountToken: false
      containers:
        - image: fireflyiii/data-importer:version-2.2.1@sha256:98cb3aa6dbd6681cbdc590a5d70dd7d964b637bac863d947bcbc20448ac56b8a
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          name: firefly-importer
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /.env
              name: config
              readOnly: true
              subPath: .env
            - mountPath: /secrets
              name: secrets
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: firefly-importer
      volumes:
        - configMap:
            name: firefly-importer
          name: config
        - name: secrets
          secret:
            secretName: firefly-importer
