nixidy/generated/prod/firefly/Deployment-firefly.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: firefly
    app.kubernetes.io/instance: firefly
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: firefly
  name: firefly
  namespace: finance
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: firefly
      app.kubernetes.io/instance: firefly
      app.kubernetes.io/name: firefly
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: firefly
        app.kubernetes.io/instance: firefly
        app.kubernetes.io/name: firefly
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: APP_KEY_FILE
              value: /secrets/app_key.txt
            - name: AUTHENTICATION_GUARD
              value: remote_user_guard
            - name: AUTHENTICATION_GUARD_EMAIL
              value: HTTP_X_AUTH_REQUEST_EMAIL
            - name: AUTHENTICATION_GUARD_HEADER
              value: HTTP_X_AUTH_REQUEST_PREFERRED_USERNAME
            - name: DB_CONNECTION
              value: pgsql
            - name: DB_DATABASE
              value: firefly
            - name: DB_HOST
              value: firefly-rw
            - name: DB_PASSWORD_FILE
              value: /secrets/db_password.txt
            - name: DB_PORT
              value: "5432"
            - name: DB_USERNAME
              value: firefly
            - name: MAIL_ENCRYPTION
              value: "null"
            - name: MAIL_FROM
              value: noreply@trdos.me
            - name: MAIL_HOST
              value: stalwart.mail.svc.cluster.local
            - name: MAIL_MAILER
              value: smtp
            - name: MAIL_PORT
              value: "25"
            - name: SITE_OWNER
              value: t0rdos@pm.me
          image: fireflyiii/core:version-6.5.4@sha256:6ae1b92eb73b4ae8a8e7e038440b93fba46267e05b5b903c62316b8cb03779af
          livenessProbe:
            httpGet:
              path: /health
              port: http
          name: firefly
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
          volumeMounts:
            - mountPath: /secrets
              name: secrets
            - mountPath: /var/www/html/storage/upload
              name: upload
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      securityContext:
        fsGroup: 33
      serviceAccountName: firefly
      volumes:
        - name: secrets
          secret:
            secretName: firefly
        - name: upload
          persistentVolumeClaim:
            claimName: firefly
