nixidy/generated/prod/firefly/HTTPRoute-firefly-importer.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly-importer
  namespace: finance
spec:
  hostnames:
    - firefly-importer-tristan.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: oauth2-proxy
          namespace: identity
          port: 4180
