nixidy/generated/prod/firefly/HTTPRoute-firefly.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: firefly
  namespace: finance
spec:
  hostnames:
    - firefly.trdos.me
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: oauth2-proxy
          namespace: identity
          port: 4180
